--- a/interstate_sales/templates/contact.jinja2
+++ b/interstate_sales/templates/contact.jinja2
@@ -5,42 +5,54 @@
 <div id="content" style="background-color:white;height:15px;width:400px;float:left;"></div>
 <div id="content" style="background-color:white;height:15px;width:180px;float:left;"></div>
 <div id="content" style="background-color:white;height:15px;width:400px;float:left;"></div>
-
-<div id="content" style="background-color:gold;height:125px;width:400px;float:left;"><center><p><h3>Our Office/Warehouse Hours:</h3>Monday - Friday<br>8am - 5pm<br> Closed: 12 - 1 </p></div>
+<div id="content" style="background-color:gold;height:125px;width:400px;float:left;">
+  <center>
+    <br><h3>Our Office/Warehouse Hours:</h3>Monday - Friday<br>8am - 5pm<br> Closed: 12 - 1 </p></center></div>
 <div id="content" style="background-color:white;height:125px;width:180px;float:left;"></div>
-<div id="content" style="background-color:gold;height:125px;width:400px;float:left;"><center><p><h3> Our Phone#:</h3>Toll-Free Phone#: 800-237-7245<br>
-Phone#: (530)823-6070<br>
-Fax# : (530)823-0994</p></center></div>
+<div id="content" style="background-color:gold;height:125px;width:400px;float:left;">
+  <center><br>
+    <h3> Our Phone#:</h3>Toll-Free Phone#: 800-237-7245<br>
+    Phone#: (530)823-6070<br>
+    Fax# : (530)823-0994</p>
+  </center>
+</div>
 
-
-<div id="content" style="background-color:black; color:white;height:50px;width:400px;float:left;"><center><p><h3> Email Us:</p></h3></center></div>
+<div id="content" style="background-color:black; color:white;height:50px;width:400px;float:left;">
+  <center>
+    <p><h3>Email Us:</p></h3>
+  </center></div>
 <div id="content" style="background-color:white;height:50px;width:180px;float:left;"></div>
-<div id="content" style="background-color:black; color:white;height:50px;width:400px;float:left;"><center><p> <h3>Our Location:</p></h3></center></div>
+<div id="content" style="background-color:black; color:white; height:50px; width:400px; float:left;">
+  <center>
+    <p> <h3>Our Location:</p></h3>
+  </center></div>
 <div id="content" style="background-color:white;height:25px;width:980px;float:left;"></div>
 
 <div id="content" style="background-color:white;height:400px;width:8%;float:left;"></div>
 <div id="content" style="background-color:white;height:400px;width:400px;float:left;">
 
+  <form action="MAILTO:miket@interstatesales.com" method="post" enctype="text/plain">
 
-<form action="MAILTO:miket@interstatesales.com" method="post" enctype="text/plain">
+  <label for="name">Name</label>
+  <input type="text" id="name" name="name">
 
-<label for="name">Name</label>
-<input type="text" id="name" name="name">
+  <label for="email">Email</label>
+  <input type="text" id="email" name="email">
 
-<label for="email">Email</label>
-<input type="text" id="email" name="email">
+  <label for="comments">Comments</label>
+  <textarea id="comments" name="comments" rows="10" cols="100"></textarea>
 
-<label for="comments">Comments</label>
-<textarea id="comments" name="comments" rows="10" cols="100"></textarea>
-
-<input type="submit" name="submit" value="Submit" class="submit">
-<input type="reset" name="reset" value="Reset" class="reset">
-</form></div>
+  <input type="submit" name="submit" value="Submit" class="submit">
+  <input type="reset" name="reset" value="Reset" class="reset">
+  </form>
+</div>
 <div id="content" style="background-color:white;margin-left:8rem;height:400px;float:left;"><center>
-<iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=12600+Locksley+Lane+suit+200,+Auburn,+ca&amp;aq=&amp;sll=37.269174,-119.306607&amp;sspn=11.758442,19.665527&amp;ie=UTF8&amp;hq=&amp;hnear=12600+Locksley+Ln+%23200,+Auburn,+California+95602&amp;t=m&amp;z=14&amp;ll=38.951307,-121.089172&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=12600+Locksley+Lane+suit+200,+Auburn,+ca&amp;aq=&amp;sll=37.269174,-119.306607&amp;sspn=11.758442,19.665527&amp;ie=UTF8&amp;hq=&amp;hnear=12600+Locksley+Ln+%23200,+Auburn,+California+95602&amp;t=m&amp;z=14&amp;ll=38.951307,-121.089172" style="color:#0000FF;text-align:left">12600 Locksley Lane #200, Auburn, CA</a></small>
-</center></div>
-
-
-<br>
+  <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=12600+Locksley+Lane+suit+200,+Auburn,+ca&amp;aq=&amp;sll=37.269174,-119.306607&amp;sspn=11.758442,19.665527&amp;ie=UTF8&amp;hq=&amp;hnear=12600+Locksley+Ln+%23200,+Auburn,+California+95602&amp;t=m&amp;z=14&amp;ll=38.951307,-121.089172&amp;output=embed">
+  </iframe><br />
+  <small>
+    <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=12600+Locksley+Lane+suit+200,+Auburn,+ca&amp;aq=&amp;sll=37.269174,-119.306607&amp;sspn=11.758442,19.665527&amp;ie=UTF8&amp;hq=&amp;hnear=12600+Locksley+Ln+%23200,+Auburn,+California+95602&amp;t=m&amp;z=14&amp;ll=38.951307,-121.089172" style="color:#0000FF; text-align:left">12600 Locksley Lane #200, Auburn, CA</a>
+  </small>
+  </center>
+</div><br>
 
 {% endblock %}
