--- a/interstate_sales/templates/home.jinja2
+++ b/interstate_sales/templates/home.jinja2
@@ -17,9 +17,9 @@
     </center>
   </div>
 
-  <div id="content_2" style="background-color:black;height:415px;width:490px;float:left;"><br>
+  <div id="content_2" style="background-color:black;height:415px;width:480px;float:left;"><br>
     <center>
-      <img src="{{request.static_url('interstate_sales:static/office.jpg')}}" alt="office" width="450" height="350" border="2">
+      <img src="{{request.static_url('interstate_sales:static/office.jpg')}}" alt="office" max-width="440" height="350" border="2">
     </center>
   </div>
 
