--- a/interstate_sales/templates/home.jinja2
+++ b/interstate_sales/templates/home.jinja2
@@ -19,7 +19,7 @@
 
   <div id="content_2" style="background-color:black;height:415px;width:490px;float:left;"><br>
     <center>
-      <img src="{{request.static_url('interstate_sales:static/office.jpg')}}" alt="office" style="width:440; height:350;" border="2">
+      <img src="{{request.static_url('interstate_sales:static/office.jpg')}}" alt="office" width="430" height="340" border="2">
     </center>
   </div>
 
