added extra if 1 image to search

--- a/interstate_sales/templates/search.jinja2
+++ b/interstate_sales/templates/search.jinja2
@@ -1,13 +1,12 @@
 {% extends 'base.jinja2' %}
 
 {% block content %}
-<div style="background-color:gold;height:75px;width:980px;float:left;"><a name="{{ search }}"></a><p></p><h3 style="padding-top: .5rem; margin-left: 1rem;">&emsp;&emsp;&emsp;Your search results for: &emsp;{{ search }}</h3><p></p>
-</div>
-<div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
+  <div style="background-color:gold;height:75px;width:980px;float:left;"><a name="{{ search }}"></a><p></p><h3 style="padding-top: .5rem; margin-left: 1rem;">&emsp;&emsp;&emsp;Your search results for: &emsp;{{ search }}</h3><p></p>
+  </div>
+  <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
 
 {% if subcategories %}
   {% for category in subcategories %}
-
 
     <div id="{{ category.replace(' ', '').lower() }}" style="background-color:gold;height:75px;width:980px;float:left;"><a name="{{ category }}"></a><p></p><h2 style="padding-top: .5rem;">&emsp;&emsp;&emsp;{{ category }}</h2><p></p>
     </div>
@@ -15,34 +14,55 @@
     <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
     {% for item in res %}
       {% if item.subcategory == category %}
-        {% set images = item.img.split(' ') %}
-        {% if images|count > 1 %}
-          <div id="menu" style="background-color:white;height:200px;width:980px;float:left;">
-          <center>
-          {% for image in images %}
+        {% if item.img %}
+          {% set images = item.img.split(' ') %}
+          {% if images|count > 1 %}
+            <div id="menu" style="background-color:white;height:200px;width:980px;float:left;">
+            <center>
+            {% for image in images %}
 
-            <img src="{{request.static_url('interstate_sales:static/')}}{{ image }}" alt="{{ image }}" style="width: 200px; height: 150px;">
+              <img src="{{request.static_url('interstate_sales:static/')}}{{ image }}" alt="{{ image }}" style="width: 200px; height: 150px;">
 
-          {% endfor %}
+            {% endfor %}
+            </center>
+            </div>
+            <center>
+            <div id="content" style="background-color:white;height:250px;width:950px;float:right;">
+            <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
+            </div>
+            </center>
+          {% elif images|count == 1 %}
+            <div id="menu" style="background-color:white;height:250px;width:250px;float:left;">
+              <center>
+                <img src="{{request.static_url('interstate_sales:static/')}}{{ item.img }}" alt="{{ item.title }}" style="max-width: 225px; max-height: 170px;">
+              </center>
+            </div>
+            {% if item.extra %}
+              <div id="content" style="background-color:white;height:250px;width:500px;float:left;">
+              <center>
+              <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
+              </center>
+              </div>
+              <div id="content" style="background-color:white;width:230px;float:right;">
+              <center><p></p>{{ item.extra|safe }}</center></div>
+            {% else %}
+              <div id="content" style="background-color:white;height:250px;width:730px;float:right;">
+              <center>
+              <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
+              </center>
+              </div>
+            {% endif %}
+          {% endif %}
+        {% else %}
           </center>
           </div>
           <center>
-          <div id="content" style="background-color:white;height:250px;width:950px;float:right;">
+          <div id="content" style="background-color:white;height:200px;width:950px;float:right;">
           <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
           </div>
           </center>
-        {% elif images|count == 1 %}
-        <div id="menu" style="background-color:white;height:250px;width:250px;float:left;">
-          <center>
-            <img src="{{request.static_url('interstate_sales:static/')}}{{ item.img }}" alt="{{ item.title }}" style="max-width: 225px; max-height: 170px;">
-          </center>
-        </div>
-        <div id="content" style="background-color:white;height:250px;width:730px;float:right;">
-        <center>
-        <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
-        </center>
-        </div>
         {% endif %}
+
         {% if auth %}
           <p>
           <form class="" action="item/{{item.id}}/edit-entry" method="get">
