search results displaying properly

--- a/interstate_sales/templates/search.jinja2
+++ b/interstate_sales/templates/search.jinja2
@@ -5,84 +5,122 @@
   </div>
   <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
 
-{% if subcategories %}
-  {% for category in subcategories %}
+  {% if subcategories %}
+    {% for category in subcategories %}
 
-    <div id="{{ category.replace(' ', '').lower() }}" style="background-color:gold;height:75px;width:980px;float:left;"><a name="{{ category }}"></a><p></p><h2 style="padding-top: .5rem;">&emsp;&emsp;&emsp;{{ category }}</h2><p></p>
-    </div>
+      <div id="{{ category.replace(' ', '').lower() }}" style="background-color:gold;height:75px;width:980px;float:left;"><a name="{{ category }}"></a><p></p><h2 style="padding-top: .5rem;">&emsp;&emsp;&emsp;{{ category }}</h2><p></p>
+      </div>
 
-    <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
-    {% for item in res %}
-      {% if item.subcategory == category %}
-        {% if item.img %}
-          {% set images = item.img.split(' ') %}
-          {% if images|count > 1 %}
-            <div id="menu" style="background-color:white;height:200px;width:980px;float:left;">
-            <center>
-            {% for image in images %}
+      <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
+      {% for item in res %}
+        {% if item.subcategory == category %}
 
-              <img src="{{request.static_url('interstate_sales:static/')}}{{ image }}" alt="{{ image }}" style="width: 200px; height: 150px;">
 
-            {% endfor %}
-            </center>
-            </div>
-            <center>
-            <div id="content" style="background-color:white;height:250px;width:950px;float:right;">
-            <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
-            </div>
-            </center>
-          {% elif images|count == 1 %}
-            <div id="menu" style="background-color:white;height:250px;width:250px;float:left;">
-              <center>
-                <img src="{{request.static_url('interstate_sales:static/')}}{{ item.img }}" alt="{{ item.title }}" style="max-width: 225px; max-height: 170px;">
-              </center>
-            </div>
-            {% if item.extra %}
-              <div id="content" style="background-color:white;height:250px;width:500px;float:left;">
-              <center>
-              <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
-              </center>
-              </div>
-              <div id="content" style="background-color:white;width:230px;float:right;">
-              <center><p></p>{{ item.extra|safe }}</center></div>
-            {% else %}
-              <div id="content" style="background-color:white;height:250px;width:730px;float:right;">
-              <center>
-              <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
-              </center>
-              </div>
+          {% if item.img %}
+            {% set images = item.img.split(' ') %}
+            {% if images|count > 2 %}
+                <div id="menu" style="background-color:white;height:200px;width:980px;float:left;">
+                <center>
+                {% for image in images %}
+
+                  <img src="{{request.static_url('interstate_sales:static/')}}{{ image }}" alt="{{ image }}" style="width: 200px; height: 150px;">
+
+                {% endfor %}
+                </center>
+                </div>
+                {% if item.extra %}
+                  <div id="content" style="background-color:white;height:250px;width:690px;float:left;">
+                  <center>
+                  <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
+                  </center>
+                  </div>
+                  <div id="content" style="background-color:white;width:230px;float:right;">
+                  <center><p></p>{{ item.extra|safe }}</center></div>
+                {% else %}
+                  <center>
+                  <div id="content" style="background-color:white;height:250px;width:950px;float:right;">
+                  <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
+                  </div>
+                  </center>
+                {% endif %}
+
+            {% elif images|count == 1 %}
+                <div id="menu" style="background-color:white; height:250px;width:250px;float:left;">
+                  <center>
+                    <img src="{{request.static_url('interstate_sales:static/')}}{{ item.img }}" alt="{{ item.title }}" style="max-width: 225px; max-height: 170px;">
+                  </center>
+                </div>
+                {% if item.extra %}
+                  <div id="content" style="background-color:white;height:250px;width:500px;float:left;">
+                  <center>
+                  <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
+                  </center>
+                  </div>
+                  <div id="content" style="background-color:white;width:230px;float:right;">
+                  <center><p></p>{{ item.extra|safe }}</center></div>
+                {% else %}
+                  <div id="content" style="background-color:white;height:250px;width:650px; margin-right: 1.5rem; float:right;">
+                  <center>
+                  <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
+                  </center>
+                  </div>
+                {% endif %}
+            {% elif images|count == 2 %}
+                <div id="menu" style="background-color:white;height:250px;width:250px;float:left;">
+                  <center>
+                    <img src="{{request.static_url('interstate_sales:static/')}}{{ images[0] }}" alt="{{ item.title }}" style="max-width: 225px; max-height: 170px;">
+                  </center>
+                </div>
+                <div id="content" style="background-color:white;height:250px;width:485px;float:left;">
+                  <center>
+                    <p></p>
+                    <h4>{{ item.title }}</h4>
+                    <br>{{ item.markdown | safe }}<p></p>
+                    </center>
+                </div>
+                <div id="menu" style="background-color:white;width:190px;float:right; margin-right: 3rem;">
+                  <center>
+                    <img src="{{request.static_url('interstate_sales:static/')}}{{ images[1] }}" alt="{{ item.title }}" style="max-width: 175px; max-height: 170px;">
+                  </center>
+                </div>
+                {% if item.extra %}
+                  <div id="content" style="background-color:white;width:230px;
+                   float:right;">
+                  <center style="margin-right: 3rem;">{{ item.extra|safe }}</center></div>
+                {% endif %}
             {% endif %}
+          {% else %}
+              </center>
+              </div>
+              <center>
+              <div id="content" style="background-color:white;height:200px;width:950px;float:right;">
+              <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
+              </div>
+              </center>
           {% endif %}
-        {% else %}
-          </center>
-          </div>
-          <center>
-          <div id="content" style="background-color:white;height:200px;width:950px;float:right;">
-          <p></p><h4>{{ item.title }}</h4><br>{{ item.markdown | safe }}<p></p>
-          </div>
-          </center>
+
+          {% if auth %}
+            <p>
+            <form class="" action="item/{{item.id}}/edit-entry" method="get">
+
+              <input type="submit" name={{item.id}} value="Edit"}>
+            </form>
+            <form class="" action="item/{{item.id}}/delete-entry" method="get">
+
+              <input type="submit" name={{item.id}} value="Delete"}>
+            </form>
+            </p><hr style="width:980px;float:left;">
+          {% endif %}
+
+
         {% endif %}
-
-        {% if auth %}
-          <p>
-          <form class="" action="item/{{item.id}}/edit-entry" method="get">
-
-            <input type="submit" name={{item.id}} value="Edit"}>
-          </form>
-          <form class="" action="item/{{item.id}}/delete-entry" method="get">
-
-            <input type="submit" name={{item.id}} value="Delete"}>
-          </form>
-          </p><hr style="width:980px;float:left;">
-        {% endif %}
-      {% endif %}
+      {% endfor %}
     {% endfor %}
-  {% endfor %}
-{% else %}
-<div style="background-color:gold;height:75px;width:980px;float:left;"><a name=""></a><p></p><h3 style="padding-top: .5rem; margin-left: 1rem;">&emsp;&emsp;&emsp;The search returned no results.</h3><p></p>
-</div>
-{% endif %}
-<div id="header" style="background-color:white;height:30px;width:980px;float:left;"></div>
+  {% else %}
+    <div style="background-color:gold;height:75px;width:980px;float:left;"><a name=""></a><p></p><h3 style="padding-top: .5rem; margin-left: 1rem;">&emsp;&emsp;&emsp;The search returned no results.</h3><p></p>
+    </div>
+  {% endif %}
 
+<div id="header" style="background-color:white;height:30px;width:980px;float:left;"></div>
 
 {% endblock  %}
