--- a/interstate_sales/templates/home.jinja2
+++ b/interstate_sales/templates/home.jinja2
@@ -30,22 +30,22 @@
 
   <div id="content_5" style="background-color:black;height:150px;width:980px;float:left;"><br>
     <center>
-      <a href="Gregory.html" target="newWindow" >
+      <a href="{{ request.route_url('gregory') }}">
         <img src="{{request.static_url('interstate_sales:static/gregory.bmp')}}" alt="gregory" width="120" height="60"border="3" align="center" >
       </a>
-      <a href="Saso.html" target="newWindow" >
+      <a href="{{ request.route_url('saso') }}">
         <img src="{{request.static_url('interstate_sales:static/saso_logo.jpg')}}" alt="saso" width="120" height="60" border="3"align="center" >
       </a>
-      <a href="Ennis-Flint.html" target="newWindow" >
+      <a href="{{ request.route_url('ennis-flint') }}">
         <img src="{{request.static_url('interstate_sales:static/ennis_logo.png')}}" alt="ennis_logo" width="120" height="100"border="3" align="center">
       </a>
-      <a href="graco.html" target="newWindow" >
+      <a href="{{ request.route_url('graco') }}">
         <img src="{{request.static_url('interstate_sales:static/graco.jpg')}}" alt="gracologo" width="120" height="100" border="3"align="center">
       </a>
-      <a href="Impact Recovery.html" target="newWindow" >
+      <a href="{{ request.route_url('impact-recovery') }}">
         <img src="{{request.static_url('interstate_sales:static/impact_logo.png')}}" alt="impact_logo" width="120" height="60"border="3" align="center">
       </a>
-      <a href="Uteck.html"  target="newWindow" >
+      <a href="{{ request.route_url('u-teck') }}">
         <img src="{{request.static_url('interstate_sales:static/u-teck.jpg')}}" alt="u-teck" width="120" height="60" border="3" align="center" >
       </a>
     </center>
@@ -76,7 +76,7 @@
   <div id="content_6" style="background-color:black;height:300px;width:350px;float:left;"><br>
     <center>
       <div id="content" style="background-color:black;height:250px;width:230px;float:right;">
-        <a href="contact.html"  target="_blank" >
+        <a href="{{ request.route_url('contact') }}">
           <img src="{{request.static_url('interstate_sales:static/auburn.jpg')}}" width="200" height="200" border="3"><p>Follow Link to Contact Us</p></a></center>
       </div>
 
