saso all around

--- a/interstate_sales/templates/gregory.jinja2
+++ b/interstate_sales/templates/gregory.jinja2
@@ -9,7 +9,7 @@
 
   <div id="header" style="background-color:gold;height:100px;width:295px;float:left;"></div>
   <div id="header" style="background-color:white;height:100px;width:380px;float:left;">
-  <center><img src="{{request.static_url('interstate_sales:static/logo_main.gif')}}" alt="transpo logo" width="300" height="100"></center></div>
+  <center><img src="{{request.static_url('interstate_sales:static/gregory.gif')}}" alt="transpo logo" width="300" height="100"></center></div>
   <div id="header" style="background-color:gold;height:100px;width:290px;float:left;"></div>
 
   <div id="header" style="background-color:white;height:25px;width:350px;float:left;"></div>
