--- a/interstate_sales/templates/home.jinja2
+++ b/interstate_sales/templates/home.jinja2
@@ -31,7 +31,7 @@
   <div id="content_5" style="background-color:black;height:150px;width:980px;float:left;"><br>
     <center>
       <a href="{{ request.route_url('gregory') }}">
-        <img src="{{request.static_url('interstate_sales:static/gregory.bmp')}}" alt="gregory" width="120" height="60"border="3" align="center" >
+        <img src="{{request.static_url('interstate_sales:static/gregory.gif')}}" alt="gregory" width="120" height="60"border="3" align="center" >
       </a>
       <a href="{{ request.route_url('saso') }}">
         <img src="{{request.static_url('interstate_sales:static/saso_logo.jpg')}}" alt="saso" width="120" height="60" border="3"align="center" >
