ennis all around

--- a/interstate_sales/templates/saso.jinja2
+++ b/interstate_sales/templates/saso.jinja2
@@ -21,7 +21,7 @@
   <center><img src="{{request.static_url('interstate_sales:static/signkit.jpg')}}" alt="looper" style="max-width:150px;height: 100px;"><br><a href="{{request.static_url('interstate_sales:static/signkit_big.jpg')}}" style="color:#0000FF;text-align:left">Illuminated Sign Kit</a></center></div>
 
   <div id="content" style="background-color:white;height:250px;width:190px;float:left;">
-  <center><img src="{{request.static_url('interstate_sales:static/flashingbeacon2.png')}}" alt="carsonite" style="max-width:150px;"><br><a href="{{request.static_url('interstate_sales:static/flashing_beacon_big.jpg')}}" style="color:#0000FF;text-align:left">Solar Powered<br>Flashing Beacon</a></center></div>
+  <center><img src="{{request.static_url('interstate_sales:static/flashingbeacon2.jpg')}}" alt="carsonite" style="max-width:150px;"><br><a href="{{request.static_url('interstate_sales:static/flashing_beacon_big.jpg')}}" style="color:#0000FF;text-align:left">Solar Powered<br>Flashing Beacon</a></center></div>
   <div id="content" style="background-color:white;height:250px;width:190px;float:left;">
   <center><img src="{{request.static_url('interstate_sales:static/rapidflash1.jpg')}}" alt="carsonite" style="max-width:150px;"><br><a href="{{request.static_url('interstate_sales:static/rapid_flash_big.jpg')}}" style="color:#0000FF;text-align:left">Solar Powered<br>Rapid Flashing Beacon</a></center></div>
   <div id="content" style="background-color:white;height:250px;width:190px;float:left;">
