fixed titles throughout and search sign blowups

--- a/interstate_sales/templates/equipment.jinja2
+++ b/interstate_sales/templates/equipment.jinja2
@@ -1,4 +1,5 @@
 {% extends "base.jinja2" %}
+{% block title %}Equipment{% endblock %}
 
 {% block content %}
 
@@ -17,7 +18,7 @@
     {% for item in equipment %}
       {% if item.subcategory == category %}
 
-      
+
         {% if item.img %}
           {% set images = item.img.split(' ') %}
           {% if images|count > 2 %}
