--- a/interstate_sales/templates/login.jinja2
+++ b/interstate_sales/templates/login.jinja2
@@ -1,4 +1,5 @@
 {% extends 'base.jinja2' %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
   <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
