--- a/interstate_sales/templates/search.jinja2
+++ b/interstate_sales/templates/search.jinja2
@@ -1,4 +1,5 @@
 {% extends 'base.jinja2' %}
+{% block title %}Search Results{% endblock %}
 
 {% block content %}
   <div style="background-color:gold;height:75px;width:980px;float:left;"><a name="{{ search }}"></a><p></p><h3 style="padding-top: .5rem; margin-left: 1rem;">&emsp;&emsp;&emsp;Your search results for: &emsp;{{ search }}</h3><p></p>
@@ -80,7 +81,19 @@
               </div>
               <div id="menu" style="background-color:white;width:190px;float:right; margin-right: 3rem;">
                 <center>
-                  <img src="{{request.static_url('interstate_sales:static/')}}{{ images[1] }}" alt="{{ item.title }}" style="max-width: 175px; max-height: 170px;">
+                  {%
+                    if images[1] == 'regulatory_sign_chart.jpg'
+                    or images[1] == 'warning_sign_chart.jpg'
+                    or images[1] == 'construction_sign_chart.jpg'
+                    or images[1] == 'guide_sign_chart.jpg'
+                  %}
+                    <a href="{{request.static_url('interstate_sales:static/')}}{{ images[1] }}" target="_blank">
+                      <img src="{{request.static_url('interstate_sales:static/')}}{{ images[1] }}" alt="{{ item.title }}" style="max-width: 175px; max-height: 170px;">
+                    </a>
+
+                  {% else %}
+                    <img src="{{request.static_url('interstate_sales:static/')}}{{ images[1] }}" alt="{{ item.title }}" style="max-width: 175px; max-height: 170px;">
+                  {% endif %}
                 </center>
               </div>
               {% if item.extra %}
