--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -134,12 +134,20 @@
 
       <div id="header" style="background:grey;height:50px;width:980px;float:left;">
 
-      <div>
-        <form class="" action="item/new-entry" method="get">
+        <div>
+          <form class="" action="item/new-entry" method="get">
 
-          <input style="margin-top: .75rem; margin-left: .75rem;" type="submit" value="Add Item"}>
-        </form>
-      </div>
+            <input style="margin-top: .75rem; margin-left: .75rem;" type="submit" value="Add Item">
+          </form>
+          <form class="" action="upload" method="get">
+
+            <input style="position:absolute;float:left;margin-top: .75rem; margin-left: .75rem;width: 200px;" type="submit" value="Upload Image">
+          </form>
+        </div>
+        <div>
+
+        </div>
+
       </div>
       <div id="header" style="background-color:white;height:25px;width:980px;float:left;"></div>
 
