file upload working locally

--- a/interstate_sales/templates/upload.jinja2
+++ b/interstate_sales/templates/upload.jinja2
@@ -3,7 +3,7 @@
 
 {% block content %}
   <div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
-
+  <h3>{{ didnotwork }}</h3>
   <form action="/upload" method="post" accept-charset="utf-8"
       enctype="multipart/form-data">
 
