--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -34,6 +34,7 @@
       <img style="border: none;" src="{{request.static_url('interstate_sales:static/arrow6.jpg')}}" alt="up icon">
     </a>
 
+    <center>
     <ul id="nav">
       <li id="home"><a href="{{request.route_url('home')}}">Home</a></li>
       <li id="guardrail"><a href="{{request.route_url('guardrail')}}">Guardrail</a>
@@ -117,7 +118,7 @@
 
       <li id="contact"><a href="{{request.route_url('contact')}}">Contact Us</a></li>
     </ul>
-
+    </center>
 
     <div id="header" style="background:gold;height:50px;width:980px;float:left;">
 
