--- a/interstate_sales/static/styles/theme.css
+++ b/interstate_sales/static/styles/theme.css
@@ -135,7 +135,7 @@ p {margin-left: 20px; margin-top: 20px; margin-right: 20px; margin-bottom: -5px;
   right: 100px;
   display: none;
   text-indent: -9999px;
-  background: url('arrow6.jpg') no-repeat;
+  background: url('../images/arrow6.jpg') no-repeat;
 }
 
 center {
