--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -6,7 +6,7 @@
     <meta name="keywords" content=" Gregory guardrail, EKT end treatment, Fleat end treatment,traffic paint,traffic signs,highway safety materials,ennis paint,graco, impact recovery, sign posts,sign hardware,stencils, corten,road signs, delineators, channelizers, tubular post, square posts, u-channel post, sign brackets, sign mounting, custom signs, trash bags, batteries, barricades, thermoplastic, flashers, caution tape, glass beads, reflective beads, flint, hotape,premark, potters, swarco, transpo, pavement markers, RPM, centermount reflectors, bituminous, hot melt adhesive, stick'n'stomp, epoxy, primer, reflective tape, sign blanks, reflective sheeting, 3m, ekt, skt, sand bags, big sandy, crash barrels, cones, reflective cones, loopers, ringtop, downing bituminous applicators, crack sealant, cold patch, pothole patch,">
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="{{request.static_url('interstate_sales:static/images/favicon.ico')}}" type="image/x-icon">
-
+    <!--
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function () {
@@ -19,6 +19,7 @@
         })
       });
     </script>
+    -->
     <link href="{{request.static_url('interstate_sales:static/styles/theme.css')}}" rel="stylesheet">
     <title>Interstate Sales - {% block title %}{% endblock %}</title>
     {% endblock %}
@@ -167,5 +168,11 @@
 
 
   </body>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script src="{{request.static_url('interstate_sales:static/scripts/app.js')}}"></script>
 </html>
