--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -107,7 +107,7 @@
     </ul>
     </center>
 
-    <div id="header" style="background:gold;height:50px;width:980px;float:left;">
+    <div id="search">
 
       <div>
         <form class="" action="search" method="post">
@@ -116,11 +116,11 @@
         </form>
       </div>
     </div>
-    <div id="header" style="background-color:white;height:25px;width:980px;float:left;"></div>
+    <div id="white_space_quad"></div>
 
     {% if auth %}
 
-      <div id="header" style="background:grey;height:50px;width:980px;float:left;">
+      <div id="grey_space_half" style="background:grey;height:50px;width:980px;float:left;">
 
         <div>
           <form class="" action="item/new-entry" method="get">
@@ -139,7 +139,7 @@
         </div>
 
       </div>
-      <div id="header" style="background-color:white;height:25px;width:980px;float:left;"></div>
+      <div id="white_space_quad"></div>
 
     {% endif %}
 
