--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -111,8 +111,8 @@
 
       <div>
         <form class="" action="search" method="post">
-          <input type="text" name="search" maxlength="25" value="" style="width: 15rem; float: right; position: absolute; margin-top: .75rem; margin-left: .75rem;">
-          <input style="margin-top: .75rem; margin-left: 17rem; width: 6rem; left: 18rem;" type="submit" value="Search"}>
+          <input id="search_box" type="text" name="search" maxlength="25" value="">
+          <input id="search_button" type="submit" value="Search"}>
         </form>
       </div>
     </div>
@@ -120,12 +120,12 @@
 
     {% if auth %}
 
-      <div id="grey_space_half" style="background:grey;height:50px;width:980px;float:left;">
+      <div id="grey_space_half">
 
         <div>
           <form class="" action="item/new-entry" method="get">
 
-            <input style="margin-top: .75rem; margin-left: .75rem;" type="submit" value="Add Item">
+            <input id="new_button" type="submit" value="Add Item">
           </form>
           <!--
           <form class="" action="upload" method="get">
