clean base html done - do not deploy -

--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -146,8 +146,8 @@
     {% block content %}
     {% endblock content %}
 
-    <div id="footer" style="background-color:gold; clear:both; text-align:center; width:980px; float:left;">
-      <a href="{{request.route_url('home')}}" style="text-decoration:none;color:black;">
+    <div id="footer">
+      <a href="{{request.route_url('home')}}">
         <p><center><b>www.interstatesales.com</center></p>
       </a>
     </div>
