--- a/interstate_sales/templates/contact.jinja2
+++ b/interstate_sales/templates/contact.jinja2
@@ -3,14 +3,14 @@
 
 {% block content %}
 
-<div id="content" style="background-color:white;height:15px;width:400px;float:left;"></div>
-<div id="content" style="background-color:white;height:15px;width:180px;float:left;"></div>
-<div id="content" style="background-color:white;height:15px;width:400px;float:left;"></div>
-<div id="content" style="background-color:gold;height:125px;width:400px;float:left;">
+<div id="white_space_15"></div>
+<div id="white_space_contact"></div>
+<div id="white_space_15"></div>
+<div id="white_space_contact_large">
   <center>
     <br><h3>Our Office/Warehouse Hours:</h3>Monday - Friday<br>8am - 5pm<br> Closed: 12 - 1 </p></center></div>
-<div id="content" style="background-color:white;height:125px;width:180px;float:left;"></div>
-<div id="content" style="background-color:gold;height:125px;width:400px;float:left;">
+<div id="white_space_contact_medium"></div>
+<div id="white_space_contact_large">
   <center><br>
     <h3> Our Phone#:</h3>Toll-Free Phone#: 800-237-7245<br>
     Phone#: (530)823-6070<br>
