--- a/interstate_sales/templates/contact.jinja2
+++ b/interstate_sales/templates/contact.jinja2
@@ -18,12 +18,12 @@
   </center>
 </div>
 
-<div id="content" style="background-color:black; color:white;height:50px;width:400px;float:left;">
+<div id="contact_title">
   <center>
     <p><h3>Email Us:</p></h3>
   </center></div>
-<div id="content" style="background-color:white;height:50px;width:180px;float:left;"></div>
-<div id="content" style="background-color:black; color:white; height:50px; width:400px; float:left;">
+<div id="white_space_contact_small"></div>
+<div id="contact_title">
   <center>
     <p> <h3>Our Location:</p></h3>
   </center></div>
