--- a/interstate_sales/templates/contact.jinja2
+++ b/interstate_sales/templates/contact.jinja2
@@ -27,10 +27,10 @@
   <center>
     <p> <h3>Our Location:</p></h3>
   </center></div>
-<div id="content" style="background-color:white;height:25px;width:980px;float:left;"></div>
+<div id="white_space_quad"></div>
 
-<div id="content" style="background-color:white;height:400px;width:8%;float:left;"></div>
-<div id="content" style="background-color:white;height:400px;width:400px;float:left;">
+<div id="white_space_left"></div>
+<div id="email_form">
 
   <form action="MAILTO:miket@interstatesales.com" method="post" enctype="text/plain">
 
@@ -47,7 +47,7 @@
   <input type="reset" name="reset" value="Reset" class="reset">
   </form>
 </div>
-<div id="content" style="background-color:white;margin-left:8rem;height:400px;float:left;"><center>
+<div id="gmap"><center>
   <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=12600+Locksley+Lane+suit+200,+Auburn,+ca&amp;aq=&amp;sll=37.269174,-119.306607&amp;sspn=11.758442,19.665527&amp;ie=UTF8&amp;hq=&amp;hnear=12600+Locksley+Ln+%23200,+Auburn,+California+95602&amp;t=m&amp;z=14&amp;ll=38.951307,-121.089172&amp;output=embed">
   </iframe><br />
   <small>
