--- a/interstate_sales/templates/delete.jinja2
+++ b/interstate_sales/templates/delete.jinja2
@@ -4,10 +4,10 @@
 {% block content %}
 
 <section class="entry">
-<div id="header" style="background-color:white;height:50px;width:980px;float:left;"></div>
-<p></p><br><h2 style="color: red; margin-left: 1rem; float: left;">Are You Sure?<br><br>There is no undo action!<br>This Entry Will Be Permanently Deleted!</h2>
-<div id="header" style="background-color:white;height:25px;width:980px;float:left;"></div>
-
+<div id="white_space_half"></div>
+<p></p><br>
+<h2 id="delete_text">Are You Sure?<br><br>There is no undo action!<br>This Entry Will Be Permanently Deleted!</h2>
+<div id="white_space_quad"></div>
   <form method="POST">
     <input type="submit" name="delete" value="YES DELETE ENTRY"/>
   </form>
