--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -15,7 +15,7 @@
     <div id="wrap">
     <a href="#" id="top"><b></b></a>
     <div id="Banner_image">
-      <img src="{{request.static_url('interstate_sales:static/images/Interstate_Sales_Backdrop.jpg')}}" alt="Interstate Sales" width="980" height="300">
+      <img src="{{request.static_url('interstate_sales:static/images/50th_banner.jpg')}}" alt="Interstate Sales" width="980">
     </div>
     <a class="scrollup" href="#" title="Back to Top">
       <img src="{{request.static_url('interstate_sales:static/images/arrow6.jpg')}}" alt="up icon">
