--- a/interstate_sales/templates/base.jinja2
+++ b/interstate_sales/templates/base.jinja2
@@ -12,6 +12,51 @@
     {% endblock %}
   </head>
   <body>
+    <div id="white_space_quad"></div>
+    {% if expr %}
+
+    <header class="header nav-down">
+      <div class="brand">
+        <button class="burger">&#9776;</button>
+      </div>
+      {% if auth %}
+        <center>
+        <div class="loggedin">
+          You Are Logged in as Administrator | <a href="{{request.route_url('new')}}">ADD A NEW RECORD</a> | <a href="{{request.route_url('logout')}}">LOGOUT</a>
+        </div>
+        </center>
+      {% endif %}
+      {% if main_menu %}
+
+        <nav class="hidden main-nav" id="main-nav">
+          <ul id="nav">
+            {% for item in main_menu %}
+              <li id="{{ item.extra }}">
+                {% if auth %}
+                  {% if auth_tools %}
+                    {% for img in auth_tools[0].img.split(' ') %}
+                      <a href="{{request.route_url('home')}}entry/{{ item.id }}/{{ img.split('.')[0] }}-entry">
+                        <img id="{{ img.split('.')[0] }}"
+                          src="{{request.static_url('interstate_sales:static/images/')}}{{ img }}">
+                      </a>
+                    {% endfor %}
+                  {% endif %}
+
+                {% endif %}
+
+                <a href="{{request.route_url('home')}}{{ item.extra }}">{{ item.title }}</a>
+              </li><hr>
+
+            {% endfor %}
+          </ul>
+
+        </nav>
+      {% endif %}
+
+
+    </header>
+    {% endif %}
+
     <div id="wrap">
     <a href="#" id="top"><b></b></a>
     <div id="Banner_image">
@@ -118,7 +163,6 @@
       </div>
     </div>
   -->
-    <div id="white_space_quad"></div>
 
     {% if auth %}
 
